@@ -964,6 +964,60 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+comment|// try and remove a null core
+try|try
+block|{
+name|cores
+operator|.
+name|unload
+argument_list|(
+literal|null
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Should have thrown an exception when unloading a null core"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+if|if
+condition|(
+operator|!
+operator|(
+name|e
+operator|instanceof
+name|SolrException
+operator|)
+condition|)
+block|{
+name|fail
+argument_list|(
+literal|"Should not have thrown SolrException but got "
+operator|+
+name|e
+argument_list|)
+expr_stmt|;
+block|}
+name|assertThat
+argument_list|(
+name|e
+operator|.
+name|getMessage
+argument_list|()
+argument_list|,
+name|containsString
+argument_list|(
+literal|"Cannot unload non-existent core [null]"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 finally|finally
 block|{
